--- a/index.html
+++ b/index.html
@@ -582,13 +582,13 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyCWfWdtFbf9Xlx6TjRsaXxJtOpuBuM4dyI",
+    apiKey: "*************************************",
     authDomain: "merllonjones-f997d.firebaseapp.com",
     databaseURL: "https://merllonjones-f997d.firebaseio.com",
     projectId: "merllonjones-f997d",
     storageBucket: "merllonjones-f997d.appspot.com",
     messagingSenderId: "476665269558",
-    appId: "1:476665269558:web:f2bf132665f192a3713797",
+    appId: "************************",
     measurementId: "G-RY5DW8VH87"
   };
   // Initialize Firebase
